run.sh now translates and runs the application, our first window works